--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <title>DoctorCare</title>
 </head>
 <body>
+        <nav>
+            <a class="menu-mobile" href="#">
+                <img  src="./imgs/logomarca.svg.svg" alt="">
+                <img src="./imgs/menu-mobile.svg.svg" alt="">
+            </a>
+        </nav>
+
         <header class="intro">
             <h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
             
@@ -82,6 +89,14 @@
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.  
                     </p>
                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="sobre">
+                <p>sobre nós</p>
+                <h4>Entenda quem somos e por que existimos</h4>
+                <span>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</span>
+                <img src="./imgs/medico.png" alt="">
             </div>
         </section>
 </body>
