--- a/index.html
+++ b/index.html
@@ -94,9 +94,18 @@
         <section>
             <div class="sobre">
                 <p>sobre nós</p>
-                <h4>Entenda quem somos e por que existimos</h4>
-                <span>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</span>
+                <h4 class="h4">Entenda quem somos e por que existimos</h4>
+                <span class="padraoP">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</span>
                 <img src="./imgs/medico.png" alt="">
+            </div>
+            <div class="contato">
+                <h4 class="h4">Entre em contato com a gente!</h4>
+                <img src="./imgs/map.svg" alt="">
+                <img src="./imgs/email.svg" alt="">
+                <p class="padraoP">R. Amauri Souza, 346</p>
+                <p class="padraoP">contato@doctorcare.com</p>   
+                <button class="wpp"><i class="fa-brands fa-whatsapp"></i>Agende sua consulta</button>
+                <img src="./imgs/homem-celular.png" alt="">
             </div>
         </section>
 </body>
