--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </button>
         </nav>
 
-        <header class="intro">
+        <header class="intro js-scroll ativo">
             <h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
             
             <h1>Assistência médica simplificada para todos</h1>
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </header>
-        <section class="serviços">
+        <section class="serviços js-scroll">
             <div class="fundo-serviços">
                 <div class="serv">
                     <p>serviços</p>
@@ -108,7 +108,7 @@
                 </div>
             </div>
         </section>
-        <section class="sobre-nos">
+        <section class="sobre-nos js-scroll">
             <div class="sobre">
                 <p>sobre nós</p>
                 <h4 class="h4">Entenda quem somos e por que existimos</h4>
