--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>DoctorCare</title>
 </head>
-<body class="menu-inactive">
+<body id="home" class="menu-inactive">
         <nav class="menu active">
                 <a href="#">
                     <h2>Doctor<strong>Care</strong></h2>
@@ -133,10 +133,12 @@
         </section>
         <footer>
             <h2>Doctor<strong>Care</strong></h2>
-            <p>&#169;2021 Beautysalon.</p>
+            <p>&#169;2021 DoctorCare.</p>
             <p>Todos os direitos reservados</p>
             <img src="./imgs/redes-sociais.svg" alt="">
         </footer>
+
+        <a id="backToTop" href="#home"> <img src="./imgs/back-to-top.svg" alt=""></a>
 
         <script src="./app.js"></script>
 
@@ -147,7 +149,7 @@
                 <li><a href="#">Sobre</a></li>
             </ul>
 
-            <a class="button" href="#">agende sua consulta</a>
+            <a class="button" href="https://wa.me/5521968993822" target="_blank">agende sua consulta</a>
 
             <ul class="social-links">
                 <li><img src="./imgs/instagram.svg" alt=""></li>
